Updated Java & Gradle toolchain